[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/texture_fonts/UI/Components/KerningPair.gd" type="Script" id=1]

[node name="KerningPair" type="HBoxContainer"]
anchor_left = -0.000976563
anchor_right = 0.545523
anchor_bottom = 0.04
margin_right = 0.383972
margin_bottom = -1.90735e-06
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 30.0
margin_bottom = 19.0
text = "from"

[node name="LineEditFrom" type="LineEdit" parent="."]
margin_left = 34.0
margin_right = 176.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
align = 1
placeholder_text = "abc"

[node name="Label2" type="Label" parent="."]
margin_left = 180.0
margin_top = 5.0
margin_right = 193.0
margin_bottom = 19.0
text = "to"

[node name="LineEditTo" type="LineEdit" parent="."]
margin_left = 197.0
margin_right = 339.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
align = 1
placeholder_text = "123"

[node name="Label3" type="Label" parent="."]
margin_left = 343.0
margin_top = 5.0
margin_right = 347.0
margin_bottom = 19.0
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpinBoxOffset" type="SpinBox" parent="."]
margin_left = 351.0
margin_right = 425.0
margin_bottom = 24.0
min_value = -100.0
align = 2

[node name="Seperator" type="Control" parent="."]
margin_left = 429.0
margin_right = 500.0
margin_bottom = 24.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteButton" type="Button" parent="."]
margin_left = 504.0
margin_right = 559.0
margin_bottom = 24.0
text = "Delete"

[connection signal="text_changed" from="LineEditFrom" to="." method="_on_LineEditFrom_text_changed"]
[connection signal="text_changed" from="LineEditTo" to="." method="_on_LineEditTo_text_changed"]
[connection signal="value_changed" from="SpinBoxOffset" to="." method="_on_SpinBoxOffset_value_changed"]
[connection signal="pressed" from="DeleteButton" to="." method="_on_DeleteButton_pressed"]
